--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-database/jatos.mv.db
-database/jatos.trace.db
-logs/application.log
-logs/application-log-2018-05-09.gz
-study_logs/d30598a8-b294-4725-9470-ce5da81e7dba.log
+database/
+logs/
+study_logs/
