updates to adapt code for production server

--- a/conf/production.conf
+++ b/conf/production.conf
@@ -11,7 +11,7 @@ include "application.conf"
 # It will be the prefix for each URL, e.g. /jatos/test -> /myBasePath/jatos/test.
 # It has to start and end with "/".
 #play.http.context = "/somepath/"
-
+play.http.context = "/musiclang/"
 
 # JATOS' study assets root directory path
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
